objects/LLC_BI__Product_Feature__c.object
<CustomObject>
    <description>The Product Feature Object stores information and details about specific features a product can have. The Product Feature is assigned to products to group them under similar features.</description>
    <fields>
        <fullName>Is_Consumer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates if a Product is a Consumer Product</description>
        <label>Is Consumer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_SBA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates if Product is SBA</description>
        <label>Is SBA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Allow_Negative_Odd_Days__c</fullName>
        <description>Administrators and users populate this optional picklist field to determine if a loan applies negative odd days interest if the first payment is less than one unit period away from the projected close date.</description>
        <inlineHelpText>Select to allow negative odd days interest.</inlineHelpText>
        <label>Allow Negative Odd Days</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Allow</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t Allow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Allow_Participation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional boolean field is manually entered. When true, this allows the associated product to be flagged and tracked as a participation.</description>
        <label>Allow Participation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Allow_Syndication__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional boolean field is manually entered. When true, this allows the associated product to be flagged and tracked as a syndication.</description>
        <label>Allow Syndication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Operating_Cost__c</fullName>
        <description>The annual cost involved in originating, servicing, and supporting a deposit product.</description>
        <label>Annual Operating Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Annual_Rate_Increase__c</fullName>
        <description>The administrator populates this optional field with how much the interest rate increases annually. The Annual Rate Increase is added to the Teaser Rate.</description>
        <inlineHelpText>This field displays how much the interest rate increases annually.</inlineHelpText>
        <label>Annual Rate Increase</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Average_Term__c</fullName>
        <description>The average life of the deposit product in months.</description>
        <label>Average Term</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Balloon_Product_Structure__c</fullName>
        <description>Administrators manually select Ballon Amount or Balloon Term from this picklist, which populates dependently on the Balloon__c field. Balloon Amount and Balloon Term determine how the Balloon calculation is performed, whether based on the total amount of the loan or the total duration of the loan.</description>
        <label>Balloon Product Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Balloon Amount</fullName>
                </value>
                <value>
                    <fullName>Balloon Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Balloon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators manually select this optional boolean field to indicate whether the product is a Balloon product. By default, it is false.</description>
        <label>Balloon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CD_Term__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It designates the length of time from the opening date of the time deposit to the maturity date (for example, 91 days 18 months).</description>
        <inlineHelpText>The length of time from the opening date of the time deposit to the maturity date (e.g. 91 days 18 months).</inlineHelpText>
        <label>CD Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Capitalize_Interest__c</fullName>
        <description>The user populates this optional picklist to determine if the interest on a loan is capitalized for the specified product. By default, it is blank.</description>
        <inlineHelpText>This field determines if the interest on your loan is capitalized for the product feature.</inlineHelpText>
        <label>Capitalize Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Checking_Withdrawal_Notice__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This optional checkbox field is manually populated during configuration and is used as an indicator flag for document preparation.</description>
        <label>Checking Withdrawal Notice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Collect_Odd_Days_Interest__c</fullName>
        <description>Administrators and users populate this optional picklist field to determine if a loan applies odd days interest and when that interest applies to the loan.</description>
        <inlineHelpText>Select an option to collect odd days interest.</inlineHelpText>
        <label>Collect Odd Days Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add to First Payment</fullName>
                </value>
                <value>
                    <fullName>Collect When Due</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Commercial__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field has been deprecated in favor of Is Commercial. It was used as a flag and never had code written around it.</description>
        <label>Commercial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Compounding_Frequency__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. Specifies an institution&apos;s general policy regarding how often accrued earnings are added to the principal balance of an account for the purpose of computing additional earnings.</description>
        <inlineHelpText>Specifies an institution&apos;s general policy regarding how often accrued earnings are added to the principal balance of an account for the purpose of computing additional earnings.</inlineHelpText>
        <label>Compounding Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Every Other Week</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semiannually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Continuous</fullName>
                </value>
                <value>
                    <fullName>No compounding/Simple</fullName>
                </value>
                <value>
                    <fullName>Semimonthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Construction_Note_Type__c</fullName>
        <description>This picklist is used to indicate a product feature that specifies the construction note type.</description>
        <inlineHelpText>Specifies the construction note type.</inlineHelpText>
        <label>Construction Note Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Construction Only</fullName>
                </value>
                <value>
                    <fullName>Construction and Permanent Note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Cost_Of_Equity_Kd__c</fullName>
        <description>This field is derived by a Financial Institution&apos;s internal models. It is the cost that represents the compensation the market demands in exchange for owning the asset before taking taxes into account.</description>
        <label>Cost of Debt (Kd)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cost_Of_Equity_Ke__c</fullName>
        <description>This field is derived by a Financial Institution&apos;s internal models and is the cost that represents the compensation the market demands in exchange for owning the asset after taking taxes into account.</description>
        <label>Cost of Equity (Ke)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Cost_of_Deposit_Capital__c</fullName>
        <description>The approximate annual cost of capital represented as a percentage of the dollar amount kept in reserves for a deposit product.</description>
        <label>Cost of Deposit Capital</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Create_Applications__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. When enabled an application record will be created for products which have this product feature. When disabled, an application record will not be created for products with this feature. By default, it is disabled.</description>
        <inlineHelpText>Check to enable application record creation for products.</inlineHelpText>
        <label>Create Applications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Crediting_Frequency_Type__c</fullName>
        <description>This data indicates how frequently accrued earnings will be paid for the account. Crediting frequency is used with compounding frequency and payment method to disclose Compounding and Crediting as required by Regulation DD. For example, &quot;Earnings will be compounded daily and will be credited to the account monthly.&quot;</description>
        <label>Crediting Frequency Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Bi-monthly</fullName>
                </value>
                <value>
                    <fullName>Semi-annually</fullName>
                </value>
                <value>
                    <fullName>At maturity</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Dependent_Structures__c</fullName>
        <description>The administrator manually populates this optional field. It specifies the structure hierarchy allowed for this product. If left blank, all structures configured in the org are allowed for the product.</description>
        <label>Dependent Structures</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ELOC</fullName>
                </value>
                <value>
                    <fullName>Letter of Credit</fullName>
                </value>
                <value>
                    <fullName>Multi Level Future</fullName>
                </value>
                <value>
                    <fullName>Regular Future</fullName>
                </value>
                <value>
                    <fullName>Term Loan/Current</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_FTP__c</fullName>
        <description>The funds transfer pricing (FTP) the bank recognizes as revenue for a deposit product as a percentage.</description>
        <label>Deposit Funds Transfer Pricing</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Reserve_Rate__c</fullName>
        <description>The percentage of the average balance for a deposit product that a bank keeps in reserve to meet short or long term liquidity obligations.</description>
        <label>Deposit Reserve Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit_Tax_Rate__c</fullName>
        <description>The annual tax rate applied to the net deposit revenue as a percentage.</description>
        <label>Deposit Tax Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Effect_of_Rate_Change_Type__c</fullName>
        <description>User selects a value from this optional picklist to identify how interest rate changes affect the loan program. By default, it is blank.</description>
        <inlineHelpText>Select a change in interest rate to see how it affects the loan.</inlineHelpText>
        <label>Effect of Rate Change Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Payment Amount</fullName>
                </value>
                <value>
                    <fullName>Maturity</fullName>
                </value>
                <value>
                    <fullName>Loan Term</fullName>
                </value>
                <value>
                    <fullName>Payment and Maturity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Exclude_From_Exposure__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. It specifies whether the product will be excluded from the relationship statistics calculations. When selected, this loan will be excluded from Relationship Statistics.</description>
        <label>Exclude From Exposure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exclude_From_LoanProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Administrators select this optional boolean field to exclude the products with this product feature from the relevant product selection page. By default, it is false.</description>
        <inlineHelpText>This field excludes all associated Product__c records from the Choose Product Picklist on the LoanProducts VisualForce page.</inlineHelpText>
        <label>Exclude from Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exposure_Filter__c</fullName>
        <description>Administrators manually populate this optional picklist field. When this field is populated, then the only loans that should be used in the exposure calculation are loans with a matching value in the Product Feature Filter field on the Statistic Configuration object. For example, if “Tier 1” is the value of the Exposure Filter field on the Product Feature object, then the only loans that will be used to calculate exposure are those with a value of “Tier 1&quot; in the Product Feature Filter field on the Statistic Configuration object.</description>
        <label>Exposure Filter</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__External_Product_Name__c</fullName>
        <description>This field is optional. It is manually populated. This field is used to specify the product file name for external doc prep providers such as Laser Pro.</description>
        <inlineHelpText>This external product name is used to specify the product file name for external doc prep providers such as Laser Pro.</inlineHelpText>
        <label>External Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Final_Payment_Amount__c</fullName>
        <description>This optional currency field determines the final payment in calculations.</description>
        <inlineHelpText>This optional currency field determines the final payment in calculations.</inlineHelpText>
        <label>Calculations Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Financed_Fee_Calculations__c</fullName>
        <description>The nCino Administrator populates this picklist field to indicate the initial state of the Financed Fee Calculations picklist on new loans created. At install, this field defaults to null for existing product features and Manual Calculation for new product features.</description>
        <inlineHelpText>Select value from this picklist to add or subtract financed fees from loan amount, or manually calculate.</inlineHelpText>
        <label>Financed Fee Calculations</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Manual Calculation</fullName>
                    <default>true</default>
                    <label>Manual Calculation</label>
                </value>
                <value>
                    <fullName>Add to Loan Amount</fullName>
                </value>
                <value>
                    <fullName>Subtract From Loan Amount</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__First_Rate_Increase__c</fullName>
        <description>The administrator populates this optional field with how much the interest rate increases for the first rate increase.</description>
        <inlineHelpText>This field displays how much the interest rate increases for the first rate increase.</inlineHelpText>
        <label>First Rate Increase</label>
        <precision>11</precision>
        <scale>8</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Home_Lending_Compliance_Calculations__c</fullName>
        <description>The user populates this picklist to indicate Home Lending compliance calculations are required for the loan. Examples of compliance calculations specific to U.S. Home Lending are Regulation Z and HOEPA High-Cost Mortgage and Higher-Priced Mortgage Loan.</description>
        <inlineHelpText>This field indicates if loans originated for this product require Home Lending compliance calculations.</inlineHelpText>
        <label>Home Lending Compliance Calculations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HCM</fullName>
                </value>
                <value>
                    <fullName>HPML</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Plan_Fee_Type__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the type of the fee associated with the IRA plan.</description>
        <inlineHelpText>Specifies the type of the fee associated with the IRA plan.</inlineHelpText>
        <label>IRA Plan Fee Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Establishment Fee</fullName>
                </value>
                <value>
                    <fullName>Annual Service/Administration Fee</fullName>
                </value>
                <value>
                    <fullName>Transfer/Direct Rollover Fee</fullName>
                </value>
                <value>
                    <fullName>Termination Fee</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Plan_Fee__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the percent (if applicable) of the fee associated with the IRA plan.</description>
        <inlineHelpText>The percent (if applicable) of the fee associated with the IRA plan.</inlineHelpText>
        <label>IRA Plan Fee</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Includes_Withdrawal_Notice_Requirements__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is populated during configuration of the product catalog. If the deposit product will include Withdrawal Notice Requirements, select this field.</description>
        <inlineHelpText>This field is populated during configuration of the product catalog. If the deposit product will include Withdrawal Notice Requirements, select this field.</inlineHelpText>
        <label>Includes Withdrawal Notice Requirements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Index_Name__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. This item indicates the name of the index tied to the variable rate account.</description>
        <inlineHelpText>This item indicates the name of the index tied to the variable rate account.</inlineHelpText>
        <label>Index Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Interest_Rate_Type__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies what kind of rate is used to determine the initial rate of interest on the account.</description>
        <inlineHelpText>Specifies what kind of rate is used to determine the initial rate of interest on the account.</inlineHelpText>
        <label>Initial Interest Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Interest_Rate__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It designates the initial interest rate on the account.</description>
        <inlineHelpText>The initial interest rate on the account.</inlineHelpText>
        <label>Initial Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Rate_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. If enabled, an initial rate (i.e. a teaser rate) was applied to the account. If disabled, this field is not used. By default, it is disabled.</description>
        <inlineHelpText>If true an initial rate (i.e. a teaser rate) was applied to the account.</inlineHelpText>
        <label>Initial Rate Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Rate_Margin__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It designates the percentage that is added to the index rate to determine the initial (teaser) rate.</description>
        <inlineHelpText>The percentage that is added to the index rate to determine the initial (teaser) rate.</inlineHelpText>
        <label>Initial Rate Margin</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Rate_Period_Number__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It designates the number of periods that the initial rate will be in effect.</description>
        <inlineHelpText>The number of periods that the initial rate will be in effect.</inlineHelpText>
        <label>Initial Rate Period Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Initial_Rate_Period_Type__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the period of time the initial rate will apply.</description>
        <inlineHelpText>Specifies the period of time the initial rate will apply.</inlineHelpText>
        <label>Initial Rate Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Week(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Accrual_Method__c</fullName>
        <description>This field is manually selected. This field sets the interest accrual methodology for determining the amount of interest owed per period. It is used for Rate &amp; Payment streams.</description>
        <label>Interest Accrual Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>30_360</fullName>
                </value>
                <value>
                    <fullName>Actual_360</fullName>
                </value>
                <value>
                    <fullName>Actual_365</fullName>
                </value>
                <value>
                    <fullName>Actual_Actual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Margin_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. If enabled, a margin is used in determining the interest rate for a variable rate account. If disabled, this field is not used. By default, it is disabled.</description>
        <inlineHelpText>If true a margin is used in determining the interest rate for a variable rate account.</inlineHelpText>
        <label>Interest Rate Margin Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Margin_Percent__c</fullName>
        <description>The user populates this optional field. The system adds this percentage to the index to determine the applicable rate for the account.</description>
        <inlineHelpText>This percentage that is added to the index to determine the applicable rate for the account.</inlineHelpText>
        <label>Interest Rate Margin Percent</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate_Type__c</fullName>
        <description>This optional field is populated by the user, and specifies the type of interest rate for a loan.</description>
        <inlineHelpText>Specifies the type of interest rate on the account.</inlineHelpText>
        <label>Interest Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Variable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Rate__c</fullName>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. It is manually populated. It specifies the interest rate of the deposit account. If an initial rate (such as a teaser) applies, this is the rate that is in effect after the expiration of the teaser period.</description>
        <inlineHelpText>The interest rate of the deposit account. If an initial rate (i.e. a teaser) applies this is the rate that is in effect after the expiration of the teaser period.</inlineHelpText>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Interest_Withdrawal_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used for Expere Doc Prep, which has not yet been implemented. This field is not required. If enabled, accrued earnings are required to be distributed out of the account. If disabled, this field is not used. By default, it is disabled.</description>
        <inlineHelpText>If true accrued earnings are required to be distributed out of the account.</inlineHelpText>
        <label>Interest Withdrawal Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Automated_Clearing_House_Service__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is not required and is manually populated. It denotes whether a product is an automated clearing house treasury service.</description>
        <label>Is Automated Clearing House Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Binding__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. When enabled, it is used as a flag for the product feature to specify a product as binding. When disabled, it is used as a flag to say the product is not binding. By default, it is disabled. No logic is run on this field.</description>
        <label>Is Binding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Bought__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. When enabled, it is used as a flag for the product feature to specify a product as bought. When disabled, it is used as a flag to say the product is not bought. By default, it is disabled. No logic is run on this field.</description>
        <label>Is Bought</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Budget_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is manually selected. This checkbox is used to specifie a product feature that specifies a product as using the budgets feature. When enabled, the Budget route and subroutes appear in the nCino UI. When disabled, they do not appear. This field is disabled by default.</description>
        <label>Is Budget</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>